Fix incorrect newline character and make it so text can wrap

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -22,8 +22,7 @@ p {
 
 textarea {
   width: 300px;
-  height: 300px;
-  text-wrap: suppress; }
+  height: 300px; }
 
 form {
   padding: 40px 153px 0 147px; }
